# findmi

./: README.md  pyproject.toml
findmi/: main.py
